# elliptec-controller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_v0.3.1.md  STATUS.md  async_example.py  controller_refactor.py  hatch_fix.diff  hatch_fix_corrected.diff  pyproject.toml  qudi-addon.md  requirements-dev.txt  requirements.txt  setup.py  test-status.md  test_group_hardware.py
.github/workflows/: python-tests.yml
docs/: api.md  hardware.md  installation.md  quickstart.md
elliptec_controller/: __init__.py  cli.py  controller.py
examples/: advanced_usage.py  async_example.py  basic_usage.py  error_handling_example.py
hardware_tests/: README.md  test_group_simple.py
tests/: __init__.py  conftest.py  test_async.py  test_controller.py  test_group_controller.py
