[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elliptec-controller"
version = "0.1.0"
description = "A Python controller for Thorlabs Elliptec rotators"
authors = [{ name = "Brian Squires", email = "squires.b@gmail.com" }]
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
dependencies = ["ptpython>=3.0.7", "pyserial>=3.5", "loguru"]
urls = { repository = "https://github.com/TheFermiSea/elliptec-controller" }

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "pytest-cov>=2.0.0"]

[project.scripts]
elliptec-controller = "elliptec_controller.cli:main"

[package]
name = "elliptec-controller"
version = "0.1.0"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["elliptec_controller"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
elliptec-controller = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytest = ">=8.3.5,<9"
loguru = ">=0.7.3,<0.8"
direnv = ">=2.36.0,<3"
